:lipstick: Fixed the alignments

--- a/src/app/users/profile/ulb-profile/profile-request/profile-request.component.scss
+++ b/src/app/users/profile/ulb-profile/profile-request/profile-request.component.scss
@@ -27,3 +27,13 @@ table .input-group {
   width: 95%;
   max-width: 100vw;
 }
+.defaultDataWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 4%;
+  .input-group {
+    width: 28%;
+    display: inline-block;
+    margin-right: 2%;
+  }
+}
